--- a/11-DivaAnalysis.tex
+++ b/11-DivaAnalysis.tex
@@ -221,7 +221,7 @@ They are the same as those created through an execution of \command{divacalc}. N
 \begin{lstlisting}[style=Bash]
 [charles@gher13 divastripped] divasave ~/DIVA/test/
 \end{lstlisting}
-will save the files into \directory{\~{}/DIVA/test/}
+will save the files into \directory{\textasciitilde/DIVA/test/}
 
 \subsection{Checking of installation}
 %------------------------------------
