--- a/5-DivaTheory.tex
+++ b/5-DivaTheory.tex
@@ -20,7 +20,7 @@ In this chapter we consider only two-dimensional cases, but generalization can b
 	\parbox{.5\textwidth}{
 		\includegraphics[width=.45\textwidth,bb=166  289 440 564]{gridding}
 		}\parbox{.5\textwidth}{
-		\caption{Gridding problem: the blue dots indicate data positions, while the nodes of the grid  are the points where the field has to be determined.\label{gridproblem}}
+		\caption[Schema of the gridding problem.]{Schema of the gridding problem: the blue dots indicate data positions, while the nodes of the grid  are the points where the field has to be determined.\label{gridproblem}}
 		}
 \end{figure}
 
@@ -44,7 +44,7 @@ For solving the gridding problem, two main techniques have to be distinguished:
 	\parbox{.5\textwidth}{
 		\includegraphics[width=.35\textwidth]{approx}
 		}\parbox{.5\textwidth}{
-		\caption{Interpolation provides a solution that goes across all the data points, while the approximation has only to be "close" to the measurements, but with a relative "smoothness".}
+		\caption[Interpolation vs. approximation.]{Interpolation provides a solution that goes across all the data points, while the approximation has only to be "close" to the measurements, but with a relative "smoothness".}
 		}
 \end{figure}
 
@@ -455,7 +455,7 @@ In an infinite domain, the correlation function was shown to be proportional to 
 \begin{figure}[H]
 \centering
 \includegraphics[width=.75\textwidth]{kernelf}
-\caption{Kernel function is given in red, while the blue curve comes from the analysis of a single point.\label{kernel1}}
+\caption[Kernel function.]{Kernel function is given in red, while the blue curve comes from the analysis of a single point.\label{kernel1}}
 \end{figure}
 
 
