--- a/6-DivaParameters.tex
+++ b/6-DivaParameters.tex
@@ -29,7 +29,7 @@ The fit yields the value $L=1.42^{\circ}$ ($\simeq$ 160~km).
 \begin{figure}[h!]
 \centering
 \includegraphics[width=.475\textwidth,bb=106 253 450 575]{Salinity_19502010_0707_10029e_fit}
-\caption{Fit of the data correlation to the theoretical kernel (dashed line). \label{fig:Salinity_19502010_0707_10029e_fit}}
+\caption[Fit of the data correlation to the theoretical kernel.]{Fit of the data correlation to the theoretical kernel (dashed line). \label{fig:Salinity_19502010_0707_10029e_fit}}
 \end{figure}
 
 \section{Determination of the signal-to-noise ratio}
