--- a/9-DivaGeneral.tex
+++ b/9-DivaGeneral.tex
@@ -78,7 +78,7 @@ The contour file (\file{coast.cont}) delimits the region where the analysis has 
 80 60\\
 60 60} 
 \end{footnotesize}
-\caption{coast.dat\label{ex:coast.dat}}
+\caption{coast.cont\label{ex:coast.dat}}
 \end{exfile}
 
 Here, our contour is made up of 2 sub-contours: 
