--- a/11-DivaAnalysis.tex
+++ b/11-DivaAnalysis.tex
@@ -232,7 +232,7 @@ installation check, compiler option testing or checking of new versions)
 %-------------------------------------------------------------------------------------------
 
 
-\section{Analysis with advection constraint activated}
+\section{Analysis with advection constraint activated\label{sec:advection}}
 %---------------------------------------------------
 
 \index{Advection}
