--- a/DivaUserGuide2012.tex
+++ b/DivaUserGuide2012.tex
@@ -49,9 +49,9 @@
 
 %---------------------------PART 3------------------
 \thispagestyle{empty}
-\part{4-D implementation (GODIVA)}
+\part{3D anlysis \& Climatologies production (GODIVA)}
 
-%\input{15-Godiva}
+\input{15-Godiva}
 
 %---------------------------PART 4------------------
 \thispagestyle{empty}
