tipos in 15-3DAnalyses

--- a/12-DivaPostprocessing.tex
+++ b/12-DivaPostprocessing.tex
@@ -14,7 +14,7 @@ We consider it is up to the user to utilize his favourite drawing tools for repr
 %-------------------------------------------
 
 \index{Gnuplot}
-\textsl{Gnuplot} is a free portable command-line driven interactive data and function plotting utility, available for various platforms (\url{http://www.gnuplot.info/}). We provide some routines for plotting \diva inputs and outputs (data, contour, mesh, analysis etc) with the help of this tool. Running \command{divagnu} makes plots in \textttt{png} format. 
+\textsl{Gnuplot} is a free portable command-line driven interactive data and function plotting utility, available for various platforms (\url{http://www.gnuplot.info/}). We provide some routines for plotting \diva inputs and outputs (data, contour, mesh, analysis etc) with the help of this tool. Running \command{divagnu} makes plots in \texttt{png} format. 
 
 \begin{tips}
 Plots provided by \gnuplot are made to help the user to have a quick look at the results, immediately after the execution. However, these plots are not always suitable for publications or diffusion. The user is invited to create his own post-processing tools, for example appealing to the existing Matlab routines.
