--- a/DivaUserGuide2012.tex
+++ b/DivaUserGuide2012.tex
@@ -49,9 +49,11 @@
 
 %---------------------------PART 3------------------
 \thispagestyle{empty}
-\part{3D anlysis \& Climatologies production (GODIVA)}
 
-\input{15-Godiva}
+\part{3-D analysis \& climatology production (GODIVA)}
+
+\input{15-3DAnalyses}
+
 
 %---------------------------PART 4------------------
 \thispagestyle{empty}
